@@ -1,3 +1,7 @@
+2006-08-31  Joachim Noreiko  <jnoreiko@yahoo.com>
+
+	* C/gedit.xml: Snippets: python and shell placeholders
+
 === gedit 2.15.9 ===
 
 2006-08-26  Joachim Noreiko  <jnoreiko@yahoo.com>
